--- a/style_page.css
+++ b/style_page.css
@@ -4,3 +4,18 @@ h1 {
     text-align: center;
 
 }
+p {
+    text-align: center;
+    color: darkmagenta;
+    font-size: 2em;
+}
+.button {
+    background-color: darkcyan; 
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+  }
