--- a/style_page.css
+++ b/style_page.css
@@ -9,6 +9,12 @@ p {
     color: darkmagenta;
     font-size: 2em;
 }
+
+h2 {
+    text-align: center;
+    color: darkmagenta;
+    font-size: 2em;
+}
 .button {
     background-color: darkcyan; 
     border: none;
@@ -18,4 +24,34 @@ p {
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
+  }
+  input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: darkcyan;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
   }
